# rag-2

./: .replit  ARCHITECTURE.md  PROJ_PLAN.md  TODO.md  pnpm-lock.yaml  pyproject.toml
artifacts/codemind-rag/: .env.example  README.md  index.html  next.config.js  package.json
artifacts/codemind-rag/.next/: trace
artifacts/codemind-rag/.next/cache/: config.json
artifacts/codemind-rag/.next/server/: server-reference-manifest.json  webpack-runtime.js
artifacts/codemind-rag/.replit-artifact/: artifact.toml
artifacts/codemind-rag/app/: globals.css  layout.tsx  page.tsx
artifacts/codemind-rag/backend/: .env.example  .gitignore  HF_SETUP.md  QDRANT_SETUP.md  README.md  config.py  docker-compose.yml  main.py  requirements.txt
artifacts/codemind-rag/backend/models/: schemas.py  (+2 more)
artifacts/codemind-rag/components/: ChatInterface.tsx  CodeViewer.tsx  FileTree.tsx  RepoInput.tsx
artifacts/codemind-rag/lib/: api.ts  constants.ts  utils.ts
artifacts/codemind-rag/types/: index.ts
attached_assets/: Pasted--PRODUCT-REQUIREMENTS-DOCUMENT-PRD-CodeMind-RAG-Intelli_1775327814358.txt  Pasted-PROJECT-CodeMind-RAG-Phase-1-OBJECTIVE-Set-up-developme_1775328084420.txt  Pasted-PROJECT-CodeMind-RAG-Phase-2-OBJECTIVE-Build-backend-re_1775328333549.txt  Pasted-PROJECT-CodeMind-RAG-Phase-3-OBJECTIVE-Implement-langua_1775329327908.txt  Pasted-PROJECT-CodeMind-RAG-Phase-4-OBJECTIVE-Store-code-chunk_1775377518915.txt  Pasted-PROJECT-CodeMind-RAG-Phase-5-OBJECTIVE-Generate-embeddi_1775377895244.txt  Pasted-PROJECT-CodeMind-RAG-Phase-6-OBJECTIVE-Implement-hybrid_1775378814018.txt
(+47 files in other folders)
